<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Schedule Notes</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <string name="account">Account</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="registration">Registration</string>
    <string name="enter_account">Enter account</string>
    <string name="enter_password">Enter password</string>
    <string name="exit">Exit</string>
    <string name="title_activity_login">Login interface</string>
    <string name="title_activity_register">Register interface</string>
    <string name="more">More</string>
    <string name="cancel">Cancel</string>
	<string name="add_content">Add content</string>
    <string name="write_content_here">Write content here</string>
    <string name="update_content">Update content</string>
    <string name="confirm">Confirm</string>
	<string name="email">Email</string>
	
	<string name="notnull">Please fill out the form</string>
	<string name="logged_in_successfully">Logged in successfully</string>
	<string name="wrong_account_or_password">Wrong account or password</string>
	<string name="please_enter_content">Please enter content</string>
	<string name="added_successfully">Added successfully</string>
	<string name="the_update_was_successful">The update was successful</string>
	<string name="are_you_sure">Are you sure?</string>
	
	<string name="deleted_successfully">Deleted successfully.</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="Registered_successfully">Registered successfully</string>
</resources>
