<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="#FFCC33"
    android:orientation="vertical" >

    <TextView 
       	android:id="@+id/txtAddContent"
       	android:padding="10dp"
       	android:gravity="center"
       	android:textColor="#ff00"
       	android:textStyle="bold"
       	android:textSize="30sp"
       	android:text="@string/add_content"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"/>
    
    <EditText 
        android:id="@+id/etContent"
        android:hint="@string/write_content_here"
        android:layout_below="@+id/txtAddContent"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"/>
    
    <Button 
        android:id="@+id/btnAddContent"
        android:text="@string/more"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"
        android:layout_below="@+id/etContent"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"/>
    
     <Button 
        android:id="@+id/btnExit"
        android:text="@string/cancel"
        android:layout_toRightOf="@+id/btnAddContent"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_below="@+id/etContent"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"/>
</RelativeLayout>
